--- a/samples/actionbarsherlock/res/values/strings.xml
+++ b/samples/actionbarsherlock/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="drawer_open">Open drawer</string>
     <string name="drawer_close">close_drawer</string>
     <string name="activity_title_navigation">Navigation Drawer Example</string>
+    <string name="activity_title_header_overlay">Header Overlay Example</string>
     <string name="choose_city">Choose a city</string>
 
 </resources>
