--- a/samples/actionbarsherlock/res/values/strings.xml
+++ b/samples/actionbarsherlock/res/values/strings.xml
@@ -14,5 +14,6 @@
     <string name="drawer_close">close_drawer</string>
     <string name="activity_title_header_overlay">Header Overlay Example</string>
     <string name="choose_city">Choose a city</string>
+    <string name="activity_title_webview">WebView sample</string>
 
 </resources>
